Fix global header overlap with local-nav.

--- a/assets/scss/3-layout/_positioning.scss
+++ b/assets/scss/3-layout/_positioning.scss
@@ -2,31 +2,9 @@
 
 // Positioning Styles
 // ==========================================
-.position__offset-fixed-nav {
-  margin-top: 115px;
-}
-
-@media screen and (min-width:360px) {
-  .position__offset-fixed-nav {
-    margin-top: 115px;
-  }
-}
-
-@media screen and (min-width:410px) {
-  .position__offset-fixed-nav {
-    margin-top: 120px;
-  }
-}
-
-@media screen and (min-width:576px) {
-  .position__offset-fixed-nav {
-    margin-top: 145px;
-  }
-}
-
-@media screen and (min-width:768px) {
-  .position__offset-fixed-nav {
-    margin-top: 135px;
+@media screen and (min-width: 992px) {
+  .positioning__offset-global-header {
+    padding-top: 180px;
   }
 }
 
